--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "react-router-dom": "^7.12.0",
     "react-dom": "^19.2.3",
     "@google/genai": "^1.37.0",
-    "react": "^19.2.3"
+    "react": "^19.2.3",
+    "@emailjs/browser": "^4.4.1"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
